# project2nix

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  cabal.project  cabal2nix.sh  configure.sh  default.nix  default.system.environment.nix  environment.nix  environment.sh  freeze.sh  hackage2nix.sh  install.sh  project2nix.cabal  project2nix.nix  repl.sh  shell.environment.nix  shell.nix  shell.project2nix.nix  stack.yaml  test.sh  v0.0-release.nix  v0.0-shell.nix  watch.sh
documents/: CHANGELOG.md  NOTES.md
examples/: REPL_project2nix.hs
examples/Example/Distribution/Nixpkgs/Haskell/Cabal/: New.hs
nix/: Cabal-2.3.0.0.nix  cabal-install-2.3.0.0.nix  default.system.environment.nix
nix/settings/: ghc841.nix
project2nix/: project2nix.cabal
project2nix/data/: spiros.cabal  spiros.cabal.nix  spiros.nix
project2nix/examples/: REPL_project2nix.hs
project2nix/nix/: release.nix  shell.project2nix.nix  shell.system.environment.nix
project2nix/nix/projects/cabal/: cabal.json  default.nix
project2nix/sources/: Prelude_project2nix.hs  ProjectToNix.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/: Derivation.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/Cabal/: Condition.hs  Lens.hs  Project.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/Cabal/Condition/: Types.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/Cabal/New/: Types.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/Cabal/Project/: Types.hs
project2nix/sources/Distribution/Nixpkgs/Haskell/Derivation/: Types.hs
project2nix/test/: GoldenTests.hs
project2nix/test/golden/: project2nix.golden
release/: cabal.project.freeze
releases/: README.md
releases/v0.0/: cabal.project.freeze  release.nix
scripts/: build.sh  cabal-build-nix.sh  cabal2nix.sh  configure.all.sh  configure.sh  haddock.sh  nix-shell-system.sh  nix-shell.sh  open.sh  provision-system-environment.sh  upload.sh
sources/Distribution/Nixpkgs/Haskell/Cabal/: Condition.hs  Lens.hs  New.hs
sources/Distribution/Nixpkgs/Haskell/Cabal/Condition/: Types.hs
sources/Distribution/Nixpkgs/Haskell/Cabal/New/: Types.hs
sources/Distribution/Nixpkgs/Haskell/Derivation/: Types.hs
sources/Prelude/Distribution/Nixpkgs/Haskell/: Cabal.hs
sources/Prelude/Distribution/Nixpkgs/Haskell/Cabal/: New.hs
stack/: stack-lts11-nix-github.yaml  stack-lts11-nix-local.yaml  stack-lts11.yaml
test/: DocTests.hs  GoldenTests.hs
