name:                project2nix
version:             0.0
cabal-version:       >=2

----------------------------------------

build-type:          Simple 
category:            Nix, Development
synopsis:            TODO 
description:         
 .
 TODO
 . 

homepage:            http://github.com/sboosali/project2nix#readme
bug-reports:         http://github.com/sboosali/project2nix/issues
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2018 Spiros Boosalis
license:             BSD3
license-file:        LICENSE
stability:           provisional
tested-with:
  -- GHC == 8.0.2
  GHC == 8.2.2
  GHC == 8.4.1

----------------------------------------

extra-source-files:
  README.md
  NOTES.md
  releases/README.md
  releases/cabal.project.freeze

  -- stack.yaml

----------------------------------------

data-files:
  data/*.cabal
  data/*.nix

----------------------------------------

source-repository head
  type:     git
  location: git://github.com/sboosali/project2nix.git

----------------------------------------
-- FLAGS

----------------------------------------
-- LIBRARY

library
 hs-source-dirs:
   sources
   examples

 ghc-options:

  --------------------
  -- warning groups
  --------------------

  -Wall

  --------------------
  -- disabled warnings
  --------------------

  -Wno-unticked-promoted-constructors

  --------------------
  -- enabled warnings
  --------------------

  -- enable
  -Wincomplete-uni-patterns
  -Wincomplete-record-updates
  -Widentities
  -Wmissing-methods

  --------------------
  -- typed-holes
  --------------------

  -- use `typed-holes`, not `undefined`, during development

  -fdefer-typed-holes
  -Wtyped-holes

  --------------------
  -- (miscellaneous warnings)
  --------------------

 if impl(ghc >= 8.0)
    ghc-options:

        --------------------
        -- warning groups
        --------------------     
        -Wcompat
      
        --------------------
        -- enabled warnings
        --------------------
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances

        --------------------

 if impl(ghc >= 8.4)
    ghc-options:

        --------------------
        -- 
        --------------------

        -- raise a warning into an error
        -Werror=missing-fields

        --------------------

 default-language: Haskell2010

 default-extensions:

   --------------------
   -- "controversial"
   --------------------
   NoImplicitPrelude
   -- NOTE thus every module implicitly has -XNoImplicitPrelude
   
   --------------------
   -- deriving
   --------------------
   AutoDeriveTypeable
   DeriveDataTypeable
   DeriveGeneric
   DeriveFunctor
   DeriveFoldable
   DeriveTraversable
   DeriveLift
   StandaloneDeriving

   --------------------
   -- syntax
   --------------------
   PackageImports
   LambdaCase
   EmptyCase
   TypeOperators
   PostfixOperators
   BangPatterns
   KindSignatures
   NamedFieldPuns
   RecordWildCards
   TupleSections
   MultiWayIf
   DoAndIfThenElse
   EmptyDataDecls
   InstanceSigs
   
   --------------------
   -- typeclasses
   --------------------
   MultiParamTypeClasses
   FlexibleContexts
   FlexibleInstances
   TypeFamilies
   FunctionalDependencies

   --------------------
   -- patterns
   --------------------
   ViewPatterns
   PatternSynonyms

   --------------------
   -- (miscellaneous extensions)
   --------------------
   ScopedTypeVariables

 other-extensions:

   --------------------
   -- macros
   --------------------
   TemplateHaskell
   -- QuasiQuotes

   --------------------
   -- syntax (of literals)
   --------------------
   OverloadedStrings
   OverloadedLists

   --------------------
   -- (miscellaneous extensions)
   --------------------
   -- RebindableSyntax
   -- kinds
   -- DataKinds ConstraintKinds
   -- harmful to inference
   -- GADTs RankNTypes
   -- (miscellaneous)

 exposed-modules:
   REPL_project2nix 
   -- the REPL_<package> module must be the first `exposed-module`, 
   -- to be loaded via `cabal new-repl` by default. 

   ProjectToNix 

   Distribution.Nixpkgs.Haskell.Derivation
   Distribution.Nixpkgs.Haskell.Derivation.Types

   Distribution.Nixpkgs.Haskell.Cabal.Lens

   Distribution.Nixpkgs.Haskell.Cabal.Condition
   Distribution.Nixpkgs.Haskell.Cabal.Condition.Types

   Distribution.Nixpkgs.Haskell.Cabal.Project
   Distribution.Nixpkgs.Haskell.Cabal.Project.Types
   
   Distribution.Nixpkgs.Haskell.Cabal.New
   Distribution.Nixpkgs.Haskell.Cabal.New.Types
   
   Example.Distribution.Nixpkgs.Haskell.Cabal.New

 other-modules:
   Prelude_project2nix
   -- Paths_project2nix

 -- autogen-modules:
   -- Paths_project2nix

 build-depends:

      base <5

    , Cabal         ^>=2.3
      -- 2.3 is required for NFData instances
    , cabal-install ^>=2.3
      -- cabal-install should be pinned to Cabal

    --------------------
    -- my packages
    -- (sboosali on github, sboo on hackage)
    --------------------

    , spiros >=0.2

    --------------------
    -- non-`cabal2nix` dependencies
    --------------------

    , hnix
    , prettyprinter

    --------------------
    -- `cabal2nix` dependencies
    --------------------

    , bytestring
    , text
    , containers
    , deepseq >=1.4

    -- , aeson
    , optparse-applicative

    -- , directory
    -- , filepath
    
    --------------------
    -- dependencies of the `cabal2nix` package
    -- (with the same version bounds too). 
    --------------------
    -- , aeson
    -- , bytestring
    -- , containers
    -- , deepseq >=1.4
    -- , directory
    -- , filepath
    -- , lens
    -- , optparse-applicative
    -- , process
    -- , split
    -- , text
    -- , time
    -- , transformers
    -- , yaml

----------------------------------------
-- TESTS...

----------------------------------------

-- test-suite doctest
--  if impl(ghcjs)
--     buildable: False

--  hs-source-dirs:      test
--  main-is:             DocTests.hs
--  type:                exitcode-stdio-1.0

--  default-language:    Haskell2010
--  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

--  build-depends:
--     base
--   , project2nix
--   , doctest

-- ----------------------------------------
-- test-suite golden
--  if impl(ghcjs)
--     buildable: False

--  hs-source-dirs:      test
--  main-is:             GoldenTests.hs
--  type:                exitcode-stdio-1.0

--  default-language:    Haskell2010
--  ghc-options:
--    -Wall
--    -threaded
--    -rtsopts -with-rtsopts=-N -with-rtsopts=-K48K

--  build-depends:
--    base
--    , project2nix
--    , Cabal 
--    , filepath
--    , prettyprinter
--    , tasty
--    , tasty-golden

----------------------------------------
-- NOTES

-- originally generated from the `spirosboosalis-simple.hsfiles` template, with `stack new`:
-- 
-- $ stack new project2nix https://raw.githubusercontent.com/sboosali/configuration/master/stack/templates/spirosboosalis.hsfiles 

----------------------------------------
